VHT, FT acronyms

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -313,7 +313,8 @@ XXX.  WE MAY WANT TO PUT REAL DATA AS A SUBFIGURE HERE.
   \label{fig:randW}
 \end{figure}
 
-\charlesX{This is easy to derive using the our expression for $\lambda_{max}$ (above)
+\charlesX{This is easy to derive using the our expression for $\lambda_{max}$ (above) in the asymptotic case
+of very small exponents ($\alpha\rightarrow 1$). OR MAYBE ($\mu\rightarrow 1$) ?.
 
 Let us approximate the Frobenius Norm (squared) by the maximum eigenvalue of $\mathbf{X}$
 
@@ -360,8 +361,8 @@ $$\dfrac{1}{4/\mu-1}\bigg\rvert_{\mu=1.15}\approx\dfrac{1}{2}\mu-\dfrac{1}{6}+\c
 
 And we have now derived the approximate, and surprising, linear relation we want for $\mu >= 1$ 
 
-This is an asymptotic relation for theVHT Universality class, but we will extend it 
-into the Fat Tailed (FT) Universality class, where it applies for the finite size weight matrices in DNNs.
+This is an asymptotic relation for the VHT Universality class for very small exponents--but we will extend 
+to larger exponents, both across the VHT and into the Fat Tailed (FT) Universality class, where it applies for the finite size weight matrices in DNNs.
 }
 
 The numerical results for the the Power Law-Norm relation shows several interesting features: 
