need 1-2 more plots

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -230,6 +230,8 @@ This approximate relation formally only hold in the asymptotic limit of very sma
 random heavy tailed matrices, but using Universality, we can safely extend it up to the finite size Fat-Tailed class, with
 exponents $\alpha=4$ (and larger).  
 
+TODO: add plots of fake random and real data here
+
 We provide a simple proof below, and more details in the Appendix}.
 
 Will also demonstrate that this relation holds numerically for both Heavy Tailed random matrices and for 
