final plots added

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -230,7 +230,26 @@ This approximate relation formally only hold in the asymptotic limit of very sma
 random heavy tailed matrices, but using Universality, we can safely extend it up to the finite size Fat-Tailed class, with
 exponents $\alpha=4$ (and larger).  
 
-TODO: add plots of fake random and real data here
+TODO:  explain plots
+
+
+
+ \begin{figure}[!htb]
+    \centering
+    \subfigure[Random Pareto Matrices] {
+        \includegraphics[scale=0.3]{img/relation-rand.png} 
+        \label{fig:relation-rand}
+    }
+    \subfigure[VGG 11 Weight matrices]{
+        \includegraphics[scale=0.3]{img/relation-vgg11.png} 
+        \label{fig:relation-vgg11}
+    }
+        \caption{Relation between $\alpha\;\lambda_{max}$ and the Frobenius Norm squared }
+    \label{fig:relations}
+\end{figure}
+
+
+
 
 We provide a simple proof below, and more details in the Appendix}.
 
