final plots added

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -244,7 +244,7 @@ TODO:  explain plots
         \includegraphics[scale=0.3]{img/relation-vgg11.png} 
         \label{fig:relation-vgg11}
     }
-        \caption{Relation between $\alpha\;\lambda_{max}$ and the Frobenius Norm squared }
+        \caption{Relation between $\alpha\;\log_{10}\;\lambda_{max}$ and the Frobenius Norm squared }
     \label{fig:relations}
 \end{figure}
 
