final plots added

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -232,8 +232,8 @@ exponents $\alpha=4$ (and larger).
 
 TODO:  explain plots
 
-Multiplying $\alpha$ by $log_{10}\lambda_{max}$, we now have a relation that increases nearly linearly with the Frobenius norm.
-Which is exactly what we want for our simple complexity metric.
+Multiplying $\alpha$ by $log_{10}\lambda_{max}$, we now have a relation that increases nearly linearly with the Frobenius norm
+for a random matrix, and is linearly correlated for real DNN data. Which is exactly what we want for our simple complexity metric.
 
 
  \begin{figure}[!htb]
