final plots added

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -257,6 +257,9 @@ We provide a simple proof below, and more details in the Appendix}.
 
 Will also demonstrate that this relation holds numerically for both Heavy Tailed random matrices and for 
 the weight matrices in pretrained DNNs.
+
+\paragraph{Proof of the Power Law - Norm Relation.} 
+
 %between the Power Law exponent and the Log Frobenius Norm numerically. 
 \nred{Below}  we generate a large number of random Heavy-Tailed random matrices $\mathbf{W}^{rand}(\mu,M)$, 
 with different number of eigenvalues $M$ (with aspect ratio $Q=1$), 
